fix: Code Smells